# scenco

./: .gitignore  .travis.yml  Circuit.hs  Code.hs  Encode.hs  Graph.hs  Library.hs  Main.hs  README.md  TechnologyMapping.hs  Test.hs  appveyor.yml  scenco.cabal
c++/: scenco.cpp  utilities.cpp
encoding/: custom_encoding.cpp  encoding.cpp  encoding.h  encoding_methods.cpp  global.h  heuristic_function.cpp  includes_defines.h  load_scenarios.cpp  support_functions.cpp  types.h  utilities.cpp
framework/inc/: framework.h
framework/src/: framework.cpp
scenco/: Main.hs
scenco/Tuura/Scenco/: Main.hs  Options.hs
src-cpp/: custom_encoding.cpp  encoding_methods.cpp  global.h  heuristic_function.cpp  includes_defines.h  load_scenarios.cpp  scenco.cpp  types.h  utilities.cpp
src-hs/: Code.hs  Encode.hs  Formula.hs  Library.hs  Main.hs  Synthesis.hs  TechnologyMapping.hs  Test.hs
src/Tuura/: Abc.hs  Circuit.hs  Code.hs  Encode.hs  Formula.hs  Graph.hs  Library.hs  Scenco.hs  Synthesis.hs  TechnologyMapping.hs
src/c++/: base.h  bool_minimisation.cpp  custom_encoding.cpp  encoding_methods.cpp  heuristic_function.cpp  load_scenarios.cpp  log_files.cpp  mapping.cpp  scenco.cpp  utilities.cpp
test/: DigitalCopier.cpog  DigitalCopier.opcodes  Intel8051_7.cpog  Intel8051_7.opcodes  Intel8051_8.cpog  Intel8051_8.opcodes  Intel8051_9.cpog  Intel8051_9.opcodes  TI_MSP_430_7.cpog  TI_MSP_430_7.opcodes  TI_MSP_430_8.cpog  TI_MSP_430_8.opcodes  arm.opcodes  arm_11.cpog  arm_11.opcodes  arm_8.cpog  arm_8.opcodes  arm_8.opcodes~  colibrilog.cpog  colibrilog.opcodes  documentflow.cpog  documentflow.cpog~  documentflow.opcodes  documentflow.opcodes~  opcodes
