name:          scenco
version:       0.0.1
synopsis:      A collection of encoding algorithms for conditional graphs
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/scenco
category:      Algorithms
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    src-cpp/base.h
    src-cpp/*.cpp

source-repository head
    type:     git
    location: https://github.com/tuura/scenco.git

library
    hs-source-dirs:   src-hs
    exposed-modules:
        Code
        Encode
        Synthesis
        TechnologyMapping
    other-modules:
        Circuit
        Formula
        Graph
        Library
    c-sources:        src-cpp/scenco.cpp
    include-dirs:     src-cpp
    build-depends:    base >= 4.7 && < 5
                    , mtl == 2.2.*
                    , transformers >= 0.4 && < 0.6
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs
    extra-libraries:  stdc++
    
test-suite scenco-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5  
                    , filepath
                    , scenco
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
    extra-libraries:  stdc++
