name:          scenco
version:       0.0.1
synopsis:      A collection of encoding algorithms for conditional graphs
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2015
homepage:      https://github.com/tuura/scenco
category:      Algorithms
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    src/c++/base.h
    src/c++/*.cpp

source-repository head
    type:     git
    location: https://github.com/tuura/scenco.git

library
    hs-source-dirs:   src
    exposed-modules:
        Tuura.Code
        Tuura.Encode
        Tuura.Graph
        Tuura.Library
        Tuura.Scenco
    other-modules:
        Tuura.Synthesis
        Tuura.TechnologyMapping
        Tuura.Circuit
        Tuura.Formula
        Tuura.Abc
    c-sources:        src/c++/scenco.cpp
    include-dirs:     src/c++
    build-depends:    base >= 4.7 && < 5
                    , data-ordlist >= 0.4.7 && < 0.5
                    , mtl == 2.2.*
                    , transformers >= 0.4 && < 0.6
    default-language: Haskell2010
    other-extensions: TypeFamilies, FlexibleContexts
    GHC-options:      -Wall -fwarn-tabs
    extra-libraries:  stdc++

test-suite scenco-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5
                    , filepath
                    , scenco
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
    extra-libraries:  stdc++

executable Scenco
    hs-source-dirs:   scenco
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5
                    , filepath
                    , scenco
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs -O2
    extra-libraries:  stdc++
